--- a/.github/workflows/checker.yml
+++ b/.github/workflows/checker.yml
@@ -29,4 +29,4 @@ jobs:
           echo "files=$diff_explorers" >> $GITHUB_OUTPUT
 
       - name: Run Checker
-        run: php Utils/Checker.php ${{ steps.diffs.outputs.files || '' }}
+        run: php Utils/Checker.php --explorers=${{ steps.diffs.outputs.files || '' }}
